[metadata]
name = conductor_take_home
description = ConductorAI take home project for engineering candidates
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
author = Nathaniel Goh
url = https://github.com/nathgoh/conductor-take-home

[options]
packages = find:
python_requires = >=3.12
install_requires =
    pandas==2.2.3
    numpy==2.1.3
    pdfplumber
    streamlit
[options.package_data]
* = README.md